--- a/Index.html
+++ b/Index.html
@@ -50,9 +50,9 @@
     </div> 
     </main>
 </body>
-<!-- <script src="./Js/bootstrap.js"></script>
+<script src="./Js/bootstrap.js"></script>
 <script src="./Js/pokemons.js"></script>
 <script src="./Js/main.js"></script> -->
-<!-- <script src="./Js/2_mashq.js"></script> -->
-<script src="./Js/1_mashq.js"></script>
+<!-- <script src="./Js/2_mashq.js"></script>
+<script src="./Js/1_mashq.js"></script> -->
 </html>
